perf: version light (~3GO Ram)